--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>About This Blog</h1>
+    <h1>About Blogger Benson</h1>
     <nav>
       <button id="menu-toggle">☰</button>
       <ul id="nav-list">
@@ -22,12 +22,17 @@
   <main>
     <section>
       <h2>Who am I?</h2>
-      <p>This blog is a space to share thoughts, tutorials, and insights on web development.</p>
+      <div class="member">
+        <img src="pic2.jpeg" alt="Detective">
+        <h3>BENSON MUIA</h3>
+    
+      </div>
+      <p>This is my blog page. i share information, politics.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 My Blog. All rights reserved.</p>
+    <p>&copy; 2025 Detective Blog. All rights reserved.</p>
   </footer>
 
   <script src="js/script.js"></script>
