--- a/post1.html
+++ b/post1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>First Blog Post</title>
+  <title>My Blog Page</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -22,13 +22,13 @@
   <main>
     <article>
       <h2>Welcome to My Blog</h2>
-      <p>Here’s the full content of my first blog post. You can add text, images, or anything else you like here.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel ex nec lorem varius placerat.</p>
+      <img src="https://images.pexels.com/photos/29457406/pexels-photo-29457406/free-photo-of-modern-workspace-with-gadgets-and-technology.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Detective" />
+      
     </article>
   </main>
 
   <footer>
-    <p>&copy; 2025 My Blog. All rights reserved.</p>
+    <p>&copy; 2025 Detective Blog. All rights reserved.</p>
   </footer>
 
   <script src="js/script.js"></script>
