--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 My Blog. All rights reserved.</p>
+    <p>&copy; 2025 Detective Blog. All rights reserved.</p>
   </footer>
 
   <script src="js/script.js"></script>
