--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ footer p {
 <a href="#">Home</a>
 <button class="dropdown-btn">ABOUT &#9662;</button>
 <div class="dropdown-container">
-    
-    <a href="blog.html">BLOG</a>
+   <a href="about.html">ABOUT ME</a> 
+  <a href="blog.html">BLOG</a>
 </div>
 
 <a href="contact.html">Contact</a>
